src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@mismatched-spec.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64
    Diagnostic severity: error
    Caused by: the requirement 'pixi <0.15.2' could not be satisfied (required by '<environment>')
