src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@non-binary-no-build.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the lock-file contains non-binary package: 'sdist', but the pypi-option `no-build` is set
