src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@source-recursive-dependency-changed-dir.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64
    Diagnostic severity: error
    Caused by: the locked source package 'foobar' does not match the requested source package, the locked path 'foobar' does not match the requested path 'not-foobar'
