src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@source-recursive-dependency.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64
    Diagnostic severity: error
    Caused by: required source package 'foobar' is locked as binary (required by 'child-package @ child-package')
