src/lock_file/snapshots/pixi__lock_file__satisfiability__tests__failing_satisiability@too-many-platforms.snap
---
source: src/lock_file/satisfiability.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the platforms in the lock-file do not match the environments platforms
